// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render-to-stream server-side rendering deferred page 1`] = `
"
      
        
          Tramvai
          🥳
        
        
          Main
          Second
          Deferred
          Deferred State
          Non-deferred
          Deferred Foo
          Deferred Bar
          Deferred Baz
        
      
      Deferred Page
      
      Loading long...
      
      
        Response:
        ok
      
      
      
        Error:
        Failed Fast Deferred
      
      
      Loading long error...
      
      Loading aborted error...
      
      this Footer in render-to-stream
      
      
      
      
      
      Response: ok
      
      
        
          Error:
          Failed Deferred
        
      
      
      
      
    "
`;

exports[`render-to-stream server-side rendering main page 1`] = `
"
      
        
          Tramvai
          🥳
        
        
          Main
          Second
          Deferred
          Deferred State
          Non-deferred
          Deferred Foo
          Deferred Bar
          Deferred Baz
        
      
      
        Main Page
        Child Component
        Error fallback
      
      
        this Footer in render-to-stream
        This is modal for index page!
      
      
    "
`;

exports[`render-to-stream server-side rendering non-deferred page 1`] = `
"
      
        
          Tramvai
          🥳
        
        
          Main
          Second
          Deferred
          Deferred State
          Non-deferred
          Deferred Foo
          Deferred Bar
          Deferred Baz
        
      
      Loading...
      this Footer in render-to-stream
      
    "
`;
